@@ -40,6 +40,9 @@ AC_TYPE_MODE_T
 AC_TYPE_OFF_T
 AC_TYPE_SIZE_T
 AC_CHECK_SIZEOF([off_t])
+
+# Checks for library functions
+AX_FUNC_MKDIR
 AC_CHECK_FUNCS([tolower towlower])
 
 # largefile support
